--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <style>
+  @media (min-width: 676px) and (max-width: 1767.98px){
     .PICKIMAGE{
     align-items: center;
     justify-content: center;
@@ -13,6 +14,7 @@
     margin-top: 100px;
     cursor: pointer;
 }
+
 img{
     padding: 20px;
     height: 300px;
@@ -38,6 +40,45 @@ p{
     color: green;
     align-self: center;
 }
+  }
+
+  @media (min-width: 276px) and (max-width: 567.98px){
+    .PICKIMAGE{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 100px;
+    cursor: pointer;
+}
+
+img{
+    padding: 20px;
+    height: 200px;
+    width: 140px;
+    border-radius: 40px 40px;
+    margin-top: 0;
+}
+section{
+    margin-bottom: 100px;
+    justify-content: center;
+    align-items: center;
+}
+p{
+    color: red;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: small;
+}
+.history{
+    text-align: center;
+    flex-wrap: nowrap;
+    white-space: pre-wrap;
+    color: green;
+    align-self: center;
+    font-size: small;
+}
+  }
    </style>
 </head>
 <body class="container-fluid">
@@ -51,7 +92,7 @@ p{
     </div>
 
     <div class="PICKIMAGE mt-lg-5 " id="choices">
-      <img src="images/paper.png" alt="Paper" onclick="playerpick('paper')" >
+      <img src="images/paper.png" alt="Paper" onclick="playerpick('paper')" class="" >
       <img src="images/Rock.png" alt="Rock" onclick="playerpick('rock')" >
       <img src="images/Scissors.png" alt="Scissors" onclick="playerpick('scissors')" >
     </div>
@@ -89,7 +130,7 @@ p{
         return "You win!";
       }
       computerScore++;
-      return "Computer wins!";
+      return "AI wins!";
     }
     function updateScores() {
       document.getElementById("Playerscore").textContent = playerScore;
@@ -99,14 +140,14 @@ p{
     function addToHistory(userpick, randompick, result) {
       const historysElement = document.getElementById("historys");
       const historyText = historysElement.textContent;
-      const newHistory = `You chose ${userpick}. Computer chose ${randompick}. ${result}\n`;
+      const newHistory = `You chose ${userpick}. AI chose ${randompick}. ${result}\n`;
       historysElement.innerHTML = newHistory + historyText;
     }
     function playerpick(userpick) {
       let randompick = mix();
       let result = Thiswinner(userpick, randompick);
       document.getElementById("results").textContent =
-        `You chose ${userpick}. Computer chose ${randompick}. ${result}`;
+        `You chose ${userpick}. AI chose ${randompick}. ${result}`;
       updateScores();
       addToHistory(userpick, randompick, result);
     }
